flux/apps/shopkeeper-cts/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopkeeper-cts
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit-version: v1.30
