flux/apps/shopkeeper-cts/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: shopkeeper

spec:
  selector:
    app: shopkeeper

  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
