flux/apps/shopkeeper-cts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopkeeper
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd

spec:
  tls:
    - hosts:
        - marketplace.ctsnl.ca
      secretName: marketplace-ctsnl-ca
  rules:
    - host: marketplace.ctsnl.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopkeeper
                port:
                  name: http
